2005-05-09  Mark McLoughlin  <mark@skynet.ie>

	* lib/usermod.py: move _uninterruptible_spawn() to ..

	* lib/util.py:
	(uninterruptible_spawnv),
	(uninterruptible_spawnve): ... here
	
	* admin-tool/profilesdialog.py,
	  lib/protosession.py: use uninterruptible variant
	of os.spawnv() here too.

2005-05-09  Mark McLoughlin  <mark@skynet.ie>

	Fix hang when exiting the prototype session on Ubuntu.

	Problem turned out to be that os.spawn() doesn't handle
	EINTR from waitpid() on Linux:
	  http://sourceforge.net/tracker/?group_id=5470&atid=105470&func=detail&aid=686667

	Thanks to Sebastien Bacher <seb128@debian.org> for help
	in tracking the problem down.

	* lib/usermod.py:
	(_uninterruptible_spawn): ignore EINTR from os.spawn()
	(set_shell), (set_homedir): use _uninterruptible_spawn()

	* lib/protosession.py:
	(ProtoSession.__session_child_watch_handler): emit the
	"finished" signal before anything else so that we
	still quit the mainloop even if we get an exception.

2005-04-26  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon-apply: actually look up the profile
	from userdb.

2005-04-11  Josep Puigdemont  <josep.puigdemont@gmail.com>

	* configure.ca: Added "ca" to ALL_LINGUAS.

2005-04-07  John Dennis  <jdennis@redhat.com>

	* Bookmark commit/sync/apply mostly working.
	  Is initial state correct?
	  Bookmark root and traversal needs reworking.
	  Many places now have redundant code that varies only
	  a few variables, these should be collapsed into subroutines.

2005-04-06  John Dennis  <jdennis@redhat.com>

	* bookmark changes now working

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.ac: Added "rw" to ALL_LINGUAS.

2005-03-31  John Dennis  <jdennis@redhat.com>

	* lib/util.py
	* lib/mozilla_bookmarks.py
	* lib/sources/mozillasource.py

	Fix traversal order problem, traversal order is now identical to
	originial bookmark order.

	Move DictCompare from mozillasource.py to util.py so it can be shared.
	